# translucent

./: .envrc  .gitignore  LICENSE  README.md  default.nix  flake.nix  fourmolu.yaml  package.yaml  stack.yaml  translucent.cabal
app/: AstJson.hs  Expansion.hs  JsonTemplate.hs  Main.hs  Repl.hs
py/: reconstruct-from-json.py  reconstruct_from_json.py
src/: AstJson.hs  Codegen.hs  Expansion.hs  JsonTemplate.hs  Lib.hs  Lisp.hs  Main.hs  Parser.hs  Python.hs  PythonAST.hs  PythonAst.hs  Result.hs  Trans.hs  Transpiler.hs  Types.hs  Util.hs
src/Codegen/: Blocks.hs  Codegen.hs  Mangler.hs
src/Language/: Translucent.hs
src/Language/Translucent/: AstJson.hs  Context.hs  Error.hs  Exceptions.hs  Expansion.hs  Form.hs  JsonTemplate.hs  Lisp.hs  LispParser.hs  Mangler.hs  Params.hs  Parser.hs  ParserTypes.hs  Python.hs  PythonAst.hs  Result.hs  Trans.hs  TransM.hs  Translation.hs  Types.hs  Util.hs
src/Transpiler/: Block.hs  Mangler.hs  Monad.hs  Translation.hs
