cabal-version: 2.4
name:          translucent
version:       0.2.0.0
copyright:     2023 uf5
maintainer:    notbailey13@gmail.com
author:        uf5
category:      Language

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , base        >=4.13.0.0 && <4.18.0.0.0
    , bytestring
    , containers
    , megaparsec
    , mtl
    , optics
    , relude      >=1.0
    , shower

  hs-source-dirs:     src
  default-language:   Haskell2010

executable translucent
  import:        shared
  main-is:       Main.hs
  other-modules:
    Lisp
    Parser
    Python
    Transpiler
    Transpiler.Block
    Transpiler.Mangler
    Transpiler.Monad
    Transpiler.Translation
