cabal-version: 2.4
name:          translucent
version:       0.2.0.0
copyright:     2023 uf5
maintainer:    notbailey13@gmail.com
author:        uf5
category:      Language

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds

  default-extensions:
    DuplicateRecordFields
    ImportQualifiedPost

  build-depends:
    , aeson
    , base        >=4.13.0.0 && <4.18.0.0.0
    , bytestring
    , mtl

  hs-source-dirs:     src
  default-language:   Haskell2010

executable translucent
  import:        shared
  main-is:       Main.hs
  other-modules:
    Language.Translucent
    Language.Translucent.Error
    Language.Translucent.Lisp
    Language.Translucent.LispParser
    Language.Translucent.Parser
    Language.Translucent.Python
    Language.Translucent.Translation
    Language.Translucent.TransM
